swaggerconnected to create provider api
